src/test/ui/issues/issue-66923-show-error-for-correct-call.stderr
error[E0277]: a value of type `std::vec::Vec<f64>` cannot be built from an iterator over elements of type `&f64`
  --> $DIR/issue-66923-show-error-for-correct-call.rs:8:39
   |
LL |     let x2: Vec<f64> = x1.into_iter().collect();
   |                                       ^^^^^^^ value of type `std::vec::Vec<f64>` cannot be built from `std::iter::Iterator<Item=&f64>`
   |
   = help: the trait `std::iter::FromIterator<&f64>` is not implemented for `std::vec::Vec<f64>`

error[E0277]: a value of type `std::vec::Vec<f64>` cannot be built from an iterator over elements of type `&f64`
  --> $DIR/issue-66923-show-error-for-correct-call.rs:12:29
   |
LL |     let x3 = x1.into_iter().collect::<Vec<f64>>();
   |                             ^^^^^^^ value of type `std::vec::Vec<f64>` cannot be built from `std::iter::Iterator<Item=&f64>`
   |
   = help: the trait `std::iter::FromIterator<&f64>` is not implemented for `std::vec::Vec<f64>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
